# TP-Mate-Discreta

./: .gitignore  README.md  pyproject.toml  run.py
resources/ejemplo/: ejemplo_consultas.txt  ejemplo_electrico.txt  ejemplo_hidrico.txt  ejemplo_respuestas.txt  ejemplo_vial.txt
resources/ejemplo-48/: consultas.txt  grafo_electrico_48.txt  grafo_hidrico_48.txt  grafo_vial_48.txt  respuestas.txt
src/: __init__.py  main.py  output.py  visualizer.py
src/algoritmos/: __init__.py  critical.py  euler.py  mst.py  short_path.py  traversal.py
src/grafo/: __init__.py  grafo_adyacencia.py  interfaz_grafo.py
